# OpenCL-BLAS

./: .cproject  .gitignore  .project  CMakeCache.txt  CMakeLists.txt  Doxyfile  INSTALL  README  TODO  cmake_uninstall.cmake  config.h  config.h.in
config/: README  include_dirs.txt  libraries.txt  library_dirs.txt
doc/api/html/: annotated.html  classes.html  files.html  gemm_8h_source.html  gemm__kernels_8h_source.html  index.html  kernel__functions_8h_source.html  kernel__test_8h_source.html  oclStdKernels_8h_source.html  oclblas1_8h_source.html  oclblas2_8h_source.html  oclblas3_8h_source.html  oclblas_8h_source.html  oclconfig_8h_source.html  ocltest_8h_source.html  ocltest__constants_8h_source.html  opencl_8h_source.html  opencl__device_8h_source.html  opencl__kernel_8h_source.html  opencl__platform_8h_source.html  opencl__types_8h_source.html  opencl__utils_8h_source.html  output_8h_source.html  structstartParamsStruct-members.html  structstartParamsStruct.html  trimp__blas1_8h_source.html  trimp__blas2_8h_source.html  trimp__blas3_8h_source.html  trimp__gemm_8h_source.html  trimpblas_8h_source.html  types_8h_source.html
doc/api/html/search/: classes_73.html
doc/api/latex/: annotated.tex  doxygen.sty  refman.tex  structstartParamsStruct.tex
src/: CMakeLists.txt  oclblas.c  oclblas.h  oclconfig.h
src/blas2/: oclblas2.h
src/blas3/: CMakeLists.txt  oclblas3.c  oclblas3.h
src/blas3/gemm/: gemm.c  gemm.h
src/oclblas/: .gitignore  CMakeLists.txt  README  createHeader.pl  oclblas.c  oclblas.h  oclconfig.h  output.c  output.h  types.c  types.h
src/oclblas/blas1/: CMakeLists.txt  oclblas1.c  oclblas1.h
src/oclblas/blas2/: CMakeLists.txt  oclblas2.h
src/oclblas/blas3/: CMakeLists.txt  oclblas3.c  oclblas3.h
src/oclblas/blas3/gemm/: .gitignore  CMakeLists.txt  createHeader.pl  gemm.c  gemm.h  gemm_kernels.c  gemm_kernels.h
src/oclblas/blas3/gemm/kernels/: DGEMM.ocl  SGEMM.ocl
src/oclblas/kernels/: DoubleComplex.ocl  DoubleComplexMatrix.ocl  DoubleMatrix.ocl  FloatComplex.ocl  FloatComplexMatrix.ocl  FloatMatrix.ocl  GetMatrixDouble.ocl  GetMatrixDoubleComplex.ocl  GetMatrixFloat.ocl  GetMatrixFloatComplex.ocl  SetMatrixDouble.ocl  SetMatrixDoubleComplex.ocl  SetMatrixFloat.ocl  SetMatrixFloatComplex.ocl  test.h
src/oclblas/oclutils/: CMakeLists.txt
src/ocltest/: CMakeLists.txt  README  kernel_functions.c  kernel_functions.h  kernel_test.c  kernel_test.h  ocltest.c  ocltest.h  ocltest_constants.h
src/oclutils/: CMakeLists.txt  oclbtypes.c  oclbtypes.h  oclutils.c  oclutils.h
src/opencl/: CMakeLists.txt  README  opencl.c  opencl.h  opencl_datautils.c  opencl_datautils.h  opencl_device.c  opencl_device.h  opencl_kernel.c  opencl_kernel.h  opencl_platform.c  opencl_platform.h  opencl_types.c  opencl_types.h  opencl_utils.c  opencl_utils.h
src/trimp/: CMakeLists.txt  README  trimp_blas.h  trimpblas.c  trimpblas.h
src/trimp/blas1/: CMakeLists.txt  trimp_blas1.c  trimp_blas1.h
src/trimp/blas2/: CMakeLists.txt  trimp_blas2.h
src/trimp/blas3/: CMakeLists.txt  trimp_blas3.c  trimp_blas3.h
src/trimp/blas3/gemm/: CMakeLists.txt  trimp_gemm.c  trimp_gemm.h
test/: CMakeLists.txt
test/oclblas/: CMakeLists.txt
test/oclblas/blas3/gemm/: CMakeLists.txt  dgemm.c  dgemm.h  dgemm_test.c  sgemm.c  sgemm.h  sgemm_test.c
test/oclblas/blas3/gemm/kernels/: CMakeLists.txt  sgemm_kernel_test.c
test/oclblas/kernels/: CMakeLists.txt  GetMatrixFloat_test.c
test/ocltest/: CMakeLists.txt  kernel_functions.c  kernel_test.c  kernel_test.h  ocltest.c  ocltest.h  ocltest_test.c
test/opencl/: CMakeLists.txt  opencl_test.c
test/testutils/: CMakeLists.txt  README  compare.c  compare.h  oclkerneltest.h  opencl_dummys.h  timing.c  timing.h
test/trimp/: CMakeLists.txt
test/trimp/blas3/gemm/: CMakeLists.txt
test/trimp/blas3/gemm/dgemm/: CMakeLists.txt  trimp_dgemm.c  trimp_dgemm.h  trimp_dgemm_test.c
test/trimp/blas3/gemm/sgemm/: CMakeLists.txt  trimp_sgemm.c  trimp_sgemm.h  trimp_sgemm_test.c
